fix: fixes serialization issues and compliance with Gradle configuration-cache (#225)
* fix: fixes serialization issues and compliance with Gradle configuration cache

Fixes #217